--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 h1
 {
-font-family: sans-serif
+font-family: sans-serif;
 }
 
 h3
 {
-font-family: sans-serif
+font-family: sans-serif;
 }
 
 p
 {
-font-family: sans-serif
+font-family: sans-serif;
 }
