--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 p {
-    font-family: "Comic Sans MS", sans-serif;
+    font-family: "DynaPuff", sans-serif;
 }
 
 h1 {
-    font-family: "Comic Sans MS", sans-serif;
+    font-family: "Chokokutai", sans-serif;
 }
 
 h3 {
-    font-family: "Comic Sans MS", sans-serif;
+    font-family: "Chokokutai", sans-serif;
 }
